# rlisp2

./: .gitignore  Cargo.toml  error-codes.md  fib.rl  lambda.rlisp  lambda2.rlisp  macro.rl  rustfmt.toml  stdlib.rlisp  sum.rl  test  test.py  test.rl  test.rlisp
http-request/: Cargo.toml
http-request/src/: lib.rs  native.rs  wasm.rs
rlisp-core/: Cargo.toml  stdlib.rlisp
rlisp-core/src/: context.rs  exception.rs  expression.rs  lib.rs  math.rs  pattern.rs  quat.rs  util.rs
rlisp-core/src/intrinsics/: functions.rs  macros.rs  mod.rs
rlisp-core/src/parser/: mod.rs  preprocessor.rs
rlisp-interpreter/: Cargo.toml
rlisp-interpreter/src/: context.rs  exception.rs  expression.rs  lib.rs  pattern.rs  quat.rs  util.rs
rlisp-intrinsics/: Cargo.toml
rlisp-intrinsics/src/: functions.rs  lib.rs  macros.rs
rlisp-lib/: cli.rl  error.rl  lambda.rl  lazy.rl  loader.rl  loader.rlisp  macros.rl  map.rl  modules.rl  monad.rl  quat.rl  repl.rl  repl.rlisp  stdio.rl  stdio.rlisp  stdlib.rl  stdlib.rlisp  structs.rl  swap.rl  test-start.rl
rlisp-parser/: Cargo.toml
rlisp-parser/src/: lib.rs
src/: app.rs  context.rs  environment.rs  exception.rs  expression.rs  intrinsics.rs  lib.rs  main.rs  repl.rs  util.rs
src/intrinsics/: functions.rs  macros.rs  mod.rs
src/parser/: mod.rs  preprocessor.rs
