[workspace]
members = ["rlisp-core"]

[package]
name = "rlisp"
version = "0.2.1"
authors = ["Benjamin Hetherington <b.w.hetherington@gmail.com>"]
description = "A simple Lisp interpreter made in Rust, loosely based on Scheme"
edition = "2018"

[dependencies]
rlisp-core = { path = "./rlisp-core/" }
clap = "2.32.0"