[workspace]
# members = ["rlisp-core"]
members = ["rlisp-parser", "rlisp-intrinsics", "rlisp-interpreter"]

[package]
name = "rlisp"
version = "0.2.3"
authors = ["Benjamin Hetherington <b.w.hetherington@gmail.com>"]
description = "A simple Lisp interpreter made in Rust, loosely based on Scheme"
edition = "2018"

[dependencies]
# rlisp-core = { path = "./rlisp-core/" }
rlisp-parser = { path = "./rlisp-parser" }
rlisp-interpreter = { path = "./rlisp-interpreter" }
rlisp-intrinsics = { path = "./rlisp-intrinsics" }
clap = "2.32.0"