[package]
name = "rlisp-intrinsics"
version = "0.1.2"
authors = ["Benjamin Hetherington <b.w.hetherington@gmail.com>"]
edition = "2018"

[features]
enable_rand = ["rlisp-interpreter/enable_rand"]

[dependencies]
rlisp-interpreter = { path = "../rlisp-interpreter" }
rlisp-parser = { path = "../rlisp-parser" }
time = "0.1"
minihttp = "0.1.9"

# [dependencies.http-request]
# git = "https://github.com/bwhetherington/http-request"
# default-features = false