[package]
name = "rlisp-intrinsics"
version = "0.1.3"
authors = ["Benjamin Hetherington <b.w.hetherington@gmail.com>"]
edition = "2018"

[features]
enable_rand = ["rlisp-interpreter/enable_rand"]
wasm = ["http-request/wasm"]

[dependencies]
rlisp-interpreter = { path = "../rlisp-interpreter" }
rlisp-parser = { path = "../rlisp-parser" }
time = "0.1"

[dependencies.http-request]
path = "../http-request"
default-features = false